--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
-    "generate-unique-id": "^2.0.1"
+    "generate-unique-id": "^2.0.1",
+    "nodemon": "^2.0.19"
   }
 }
